// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableSkeleton Component should allow variations in table layout: borders and table header row removed 1`] = `
<Table
  ariaLabel={null}
  className="curiosity-skeleton-table "
  columnHeaders={
    [
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
    ]
  }
  componentClassNames={
    {
      "table": "curiosity-table",
      "td": "curiosity-table__td",
      "tdAction": "curiosity-table__td-action",
      "tdExpand": "curiosity-table__td-expand",
      "tdExpanded": "curiosity-table__td-expand-expanded",
      "tdExpandedContent": "curiosity-table__td-expand-content",
      "tdExpandedWrapper": "curiosity-table__td-expand-wrapper",
      "tdSelect": "curiosity-table__td-select",
      "th": "curiosity-table__th",
      "tr": "curiosity-table__tr",
      "trExpand": "curiosity-table__tr-expand",
      "trExpanded": "curiosity-table__tr-expand-expanded",
      "trExpandedContent": "curiosity-table__tr-expand-content",
    }
  }
  emptyTable={
    {
      "message": "Clear all filters and try again",
      "title": "No results found",
    }
  }
  isBorders={false}
  isHeader={false}
  isStriped={false}
  onExpand={null}
  onSelect={null}
  onSort={null}
  rows={
    [
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
    ]
  }
  summary={null}
  variant={null}
/>
`;

exports[`TableSkeleton Component should allow variations in table layout: className and variant 1`] = `
<Table
  ariaLabel={null}
  className="curiosity-skeleton-table lorem-ipsum-class"
  columnHeaders={
    [
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
    ]
  }
  componentClassNames={
    {
      "table": "curiosity-table",
      "td": "curiosity-table__td",
      "tdAction": "curiosity-table__td-action",
      "tdExpand": "curiosity-table__td-expand",
      "tdExpanded": "curiosity-table__td-expand-expanded",
      "tdExpandedContent": "curiosity-table__td-expand-content",
      "tdExpandedWrapper": "curiosity-table__td-expand-wrapper",
      "tdSelect": "curiosity-table__td-select",
      "th": "curiosity-table__th",
      "tr": "curiosity-table__tr",
      "trExpand": "curiosity-table__tr-expand",
      "trExpanded": "curiosity-table__tr-expand-expanded",
      "trExpandedContent": "curiosity-table__tr-expand-content",
    }
  }
  emptyTable={
    {
      "message": "Clear all filters and try again",
      "title": "No results found",
    }
  }
  isBorders={true}
  isHeader={false}
  isStriped={false}
  onExpand={null}
  onSelect={null}
  onSort={null}
  rows={
    [
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
    ]
  }
  summary={null}
  variant="compact"
/>
`;

exports[`TableSkeleton Component should allow variations in table layout: column and row count  1`] = `
<Table
  ariaLabel={null}
  className="curiosity-skeleton-table "
  columnHeaders={
    [
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
    ]
  }
  componentClassNames={
    {
      "table": "curiosity-table",
      "td": "curiosity-table__td",
      "tdAction": "curiosity-table__td-action",
      "tdExpand": "curiosity-table__td-expand",
      "tdExpanded": "curiosity-table__td-expand-expanded",
      "tdExpandedContent": "curiosity-table__td-expand-content",
      "tdExpandedWrapper": "curiosity-table__td-expand-wrapper",
      "tdSelect": "curiosity-table__td-select",
      "th": "curiosity-table__th",
      "tr": "curiosity-table__tr",
      "trExpand": "curiosity-table__tr-expand",
      "trExpanded": "curiosity-table__tr-expand-expanded",
      "trExpandedContent": "curiosity-table__tr-expand-content",
    }
  }
  emptyTable={
    {
      "message": "Clear all filters and try again",
      "title": "No results found",
    }
  }
  isBorders={true}
  isHeader={false}
  isStriped={false}
  onExpand={null}
  onSelect={null}
  onSort={null}
  rows={
    [
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
    ]
  }
  summary={null}
  variant={null}
/>
`;

exports[`TableSkeleton Component should allow variations in table layout: no table header and zero rows 1`] = `
<Table
  ariaLabel={null}
  className="curiosity-skeleton-table curiosity-skeleton-table__hidden-rows "
  columnHeaders={
    [
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
    ]
  }
  componentClassNames={
    {
      "table": "curiosity-table",
      "td": "curiosity-table__td",
      "tdAction": "curiosity-table__td-action",
      "tdExpand": "curiosity-table__td-expand",
      "tdExpanded": "curiosity-table__td-expand-expanded",
      "tdExpandedContent": "curiosity-table__td-expand-content",
      "tdExpandedWrapper": "curiosity-table__td-expand-wrapper",
      "tdSelect": "curiosity-table__td-select",
      "th": "curiosity-table__th",
      "tr": "curiosity-table__tr",
      "trExpand": "curiosity-table__tr-expand",
      "trExpanded": "curiosity-table__tr-expand-expanded",
      "trExpandedContent": "curiosity-table__tr-expand-content",
    }
  }
  emptyTable={
    {
      "message": "Clear all filters and try again",
      "title": "No results found",
    }
  }
  isBorders={true}
  isHeader={false}
  isStriped={false}
  onExpand={null}
  onSelect={null}
  onSort={null}
  rows={
    [
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
    ]
  }
  summary={null}
  variant={null}
/>
`;

exports[`TableSkeleton Component should allow variations in table layout: table column widths 1`] = `
<Table
  ariaLabel={null}
  className="curiosity-skeleton-table "
  columnHeaders={
    [
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
        "width": 30,
      },
      {
        "content": <Skeleton
          size="md"
        />,
        "width": 15,
      },
      {
        "content": <Skeleton
          size="md"
        />,
        "width": 15,
      },
    ]
  }
  componentClassNames={
    {
      "table": "curiosity-table",
      "td": "curiosity-table__td",
      "tdAction": "curiosity-table__td-action",
      "tdExpand": "curiosity-table__td-expand",
      "tdExpanded": "curiosity-table__td-expand-expanded",
      "tdExpandedContent": "curiosity-table__td-expand-content",
      "tdExpandedWrapper": "curiosity-table__td-expand-wrapper",
      "tdSelect": "curiosity-table__td-select",
      "th": "curiosity-table__th",
      "tr": "curiosity-table__tr",
      "trExpand": "curiosity-table__tr-expand",
      "trExpanded": "curiosity-table__tr-expand-expanded",
      "trExpandedContent": "curiosity-table__tr-expand-content",
    }
  }
  emptyTable={
    {
      "message": "Clear all filters and try again",
      "title": "No results found",
    }
  }
  isBorders={true}
  isHeader={false}
  isStriped={false}
  onExpand={null}
  onSelect={null}
  onSort={null}
  rows={
    [
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
            "width": 30,
          },
          {
            "content": <Skeleton
              size="md"
            />,
            "width": 15,
          },
          {
            "content": <Skeleton
              size="md"
            />,
            "width": 15,
          },
        ],
      },
    ]
  }
  summary={null}
  variant={null}
/>
`;

exports[`TableSkeleton Component should allow variations in table layout: table header and zero rows 1`] = `
<Table
  ariaLabel={null}
  className="curiosity-skeleton-table curiosity-skeleton-table__hidden-rows "
  columnHeaders={
    [
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
    ]
  }
  componentClassNames={
    {
      "table": "curiosity-table",
      "td": "curiosity-table__td",
      "tdAction": "curiosity-table__td-action",
      "tdExpand": "curiosity-table__td-expand",
      "tdExpanded": "curiosity-table__td-expand-expanded",
      "tdExpandedContent": "curiosity-table__td-expand-content",
      "tdExpandedWrapper": "curiosity-table__td-expand-wrapper",
      "tdSelect": "curiosity-table__td-select",
      "th": "curiosity-table__th",
      "tr": "curiosity-table__tr",
      "trExpand": "curiosity-table__tr-expand",
      "trExpanded": "curiosity-table__tr-expand-expanded",
      "trExpandedContent": "curiosity-table__tr-expand-content",
    }
  }
  emptyTable={
    {
      "message": "Clear all filters and try again",
      "title": "No results found",
    }
  }
  isBorders={true}
  isHeader={true}
  isStriped={false}
  onExpand={null}
  onSelect={null}
  onSort={null}
  rows={
    [
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
    ]
  }
  summary={null}
  variant={null}
/>
`;

exports[`TableSkeleton Component should render a non-connected component: non-connected 1`] = `
<Table
  ariaLabel={null}
  className="curiosity-skeleton-table "
  columnHeaders={
    [
      {
        "content": <Skeleton
          size="md"
        />,
      },
    ]
  }
  componentClassNames={
    {
      "table": "curiosity-table",
      "td": "curiosity-table__td",
      "tdAction": "curiosity-table__td-action",
      "tdExpand": "curiosity-table__td-expand",
      "tdExpanded": "curiosity-table__td-expand-expanded",
      "tdExpandedContent": "curiosity-table__td-expand-content",
      "tdExpandedWrapper": "curiosity-table__td-expand-wrapper",
      "tdSelect": "curiosity-table__td-select",
      "th": "curiosity-table__th",
      "tr": "curiosity-table__tr",
      "trExpand": "curiosity-table__tr-expand",
      "trExpanded": "curiosity-table__tr-expand-expanded",
      "trExpandedContent": "curiosity-table__tr-expand-content",
    }
  }
  emptyTable={
    {
      "message": "Clear all filters and try again",
      "title": "No results found",
    }
  }
  isBorders={true}
  isHeader={false}
  isStriped={false}
  onExpand={null}
  onSelect={null}
  onSort={null}
  rows={
    [
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
    ]
  }
  summary={null}
  variant={null}
/>
`;
